fix align box

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13799,6 +13799,10 @@ pre {
   margin: 6px;
 }
 
+.container-center {
+  margin: 0 auto;
+}
+
 body .main {
   background: #0f1724;
   color: #91aace;
