--- a/resources/sass/_components.scss
+++ b/resources/sass/_components.scss
@@ -77,3 +77,7 @@ pre{
   padding: 2px 6px;
   margin: 6px;
 }
+
+.container-center{
+  margin:0 auto;
+}
